# cruft

./: CMakeLists.txt  Doxyfile  README.md
include/bd/: CMakeLists.txt
include/bd/context/: CMakeLists.txt  context.h  glfwcontext.h  renderloop.h  renderstate.h  shader.h  texture.h
include/bd/datastructure/: CMakeLists.txt  blockingqueue.h  octree.h
include/bd/file/: CMakeLists.txt  datareader.h  datatypes.h  parsedat.h
include/bd/filter/: CMakeLists.txt  blockaveragefilter.h  valuerangefilter.h  voxelopacityfilter.h
include/bd/geo/: BBox.h  CMakeLists.txt  axis.h  drawable.h  geometry.h  mesh.h  quad.h  sphere.h  wireframebox.h
include/bd/graphics/: BBox.h  CMakeLists.txt  axis.h  drawable.h  geometry.h  mesh.h  quad.h  renderer.h  shader.h  texture.h  vertexarrayobject.h  view.h
include/bd/io/: CMakeLists.txt  buffer.h  bufferedreader.h  bufferpool.h  datareader.h  datatypes.h  datfile.h  fileblock.h  fileblockcollection.h  indexfile.h  indexfileheader.h  parsedat.h  reader.h  readerworker.h  writer.h
include/bd/log/: CMakeLists.txt  gl_log.h  logger.h
include/bd/scene/: CMakeLists.txt  transform.h  transformable.h  view.h
include/bd/tbb/: CMakeLists.txt  parallelblockaverage.h  parallelblockempties.h  parallelblockminmax.h  parallelblockstats.h  parallelfor_voxelclassifier.h  parallelfor_voxelrelevance.h  parallelhistogram.h  parallelminmax.h  parallelreduce_blockempties.h  parallelreduce_blockminmax.h  parallelreduce_blockrov.h  parallelreduce_histogram.h  parallelreduce_minmax.h  parallelvolumeminmax.h  parallelvolumestats.h  parallelvoxelclassifier.h
include/bd/util/: CMakeLists.txt  bdobj.h  boundingbox.h  color.h  context.h  gl_strings.h  glfwcontext.h  ordinal.h  renderloop.h  texture.h  util.h
include/bd/volume/: CMakeLists.txt  block.h  blockaverage.h  blockaveragefilter.h  blockaverager.h  blockcollection.h  blockcollection2.h  blockcollection2_impl.hpp  blockloader.h  bufferedreader.h  fileblock.h  fileblockcollection.h  indexfile.h  minmax.h  transferfunction.h  valuerangefilter.h  volume.h  voxelopacityfilter.h
res/: scalar_opacity_tf.1dt  testvol_8x8x8.raw
src/bd/: CMakeLists.txt
src/bd/context/: CMakeLists.txt  context.cpp  glfwcontext.cpp  renderstate.cpp  shader.cpp  texture.cpp  view.cpp
src/bd/datastructure/: CMakeLists.txt  octree.cpp
src/bd/file/: CMakeLists.txt  datatypes.cpp  parsedat.cpp
src/bd/geo/: BBox.cpp  CMakeLists.txt  axis.cpp  mesh.cpp  quad.cpp  shader.cpp  sphere.cpp  vertexarrayobject.cpp  wireframebox.cpp
src/bd/graphics/: BBox.cpp  CMakeLists.txt  axis.cpp  mesh.cpp  quad.cpp  renderer.cpp  renderstate.cpp  shader.cpp  texture.cpp  vertexarrayobject.cpp  view.cpp
src/bd/io/: CMakeLists.txt  datatypes.cpp  datfile.cpp  fileblock.cpp  indexfile.cpp  indexfileheader.cpp  parsedat.cpp
src/bd/log/: CMakeLists.txt  gl_log.cpp  logger.cpp
src/bd/scene/: CMakeLists.txt  renderstate.cpp  transform.cpp  transformable.cpp  view.cpp
src/bd/shader/manager/: shader.h  shadermanager.cpp  shadermanager.h  shaderprogram.cpp  shaderprogram.h  shaderstage.cpp  shaderstage.h
src/bd/util/: CMakeLists.txt  bdobj.cpp  boundingbox.cpp  color.cpp  context.cpp  gl_strings.cpp  glfwcontext.cpp  util.cpp
src/bd/volume/: CMakeLists.txt  block.cpp  blockcollection.cpp  blockloader.cpp  colortransferfunction.cpp  indexfile.cpp  opacitytransferfunction.cpp  transferfunction.cpp  volume.cpp
test/: CMakeLists.txt
test/catch/: catch.hpp
test/test_datastructure/: CMakeLists.txt  test_datastructure_main.cpp  test_octree.cpp
test/test_includes/: defines.h
test/test_io/: CMakeLists.txt  test_indexfile.cpp  test_io_main.cpp
test/test_parsedat/: CMakeLists.txt  main.cpp  test_parsedat_main.cpp
test/test_tbb/: CMakeLists.txt  test_ParallelVoxelClassifer.cpp  test_tbb_main.cpp
test/test_util/: CMakeLists.txt  test_util_main.cpp
test/test_volume/: CMakeLists.txt  test_Block.cpp  test_BlockCollection.cpp  test_OpacityTransferFunction.cpp  test_VoxelOpacityFilter.cpp  test_volume_main.cpp
